# SnapX

./: .editorconfig  .gitignore  Directory.Build.props  GitVersion.yml  LICENSE.md  Progress.md  README.md  SnapX.sln  SnapX.slnx  build.ps1  build.sh  commitlint.config.js  global.json  snapcraft.yaml  snapx-ui.sh  version.json
.github/: BUILDING.md  CONTRIBUTING.md  FUNDING.yml  Progress.md  SECURITY.md  labeler.yml  pull_request_template.md  renovate.json
.nuke/: build.schema.json
SnapX.Avalonia/: .env  App.axaml  App.axaml.cs  OSTray.cs  Program.cs  SnapX.Avalonia.csproj  SnapXAvalonia.cs  ViewLocator.cs  app.manifest
SnapX.CLI/: CLIAbout.cs  CLIChangelog.cs  Program.cs  SnapX.CLI.csproj
SnapX.CommonUI/: AboutDialog.cs  Changelog.cs  SnapX.CommonUI.csproj  TaskThumbnailView.cs
SnapX.Core/: ApplicationConfig.cs  DebugHelper.cs  Enums.cs  Events.cs  FeatureFlags.cs  GlobalUsings.cs  ILLink.Descriptors.xml  Linux.props  MasterkeyManager.cs  NativeMethods.json  NativeMethods.txt  NuGet.config  OSX.props  ObservableSink.cs  SettingManager.cs  SettingsYAMLContext.cs  SnapX.Core.csproj  SnapX.cs  SnapXL.cs  SnapXResources.cs  SqliteConfigurationExtension.cs  SqliteConfigurationProvider.cs  SqliteConfigurationSource.cs  Telemetry.cs  VersionEnforcer.cs  Windows.props
SnapX.Core/ScreenCapture/Rust/: Cargo.toml  build.rs
SnapX.Core/ScreenCapture/Rust/bindings/: snapxrust.cs
SnapX.Core/ScreenCapture/Rust/src/: lib.rs  snapxrust.udl
SnapX.GTK4/: Program.cs  SnapX.GTK4.csproj
SnapX.NativeMessagingHost/: NativeMessagingHost.cs  Program.cs  (+1 more)
SnapX.Secrets/: Shim.cs  (+1 more)
(+665 files in other folders)
