[package]
name = "snapxrust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
xcap = "0.4.0"
uniffi = { version = "0.25.0", features = [ "build" ] }
base64 = "0.22.1"
serde = "1.0.217"
serde_json = "1.0.135"

[build-dependencies]
uniffi = { version = "0.25.0", features = [ "build" ] }
uniffi_build = "0.25.0"
uniffi_bindgen = "0.25.0"
camino = "1.1.9"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[bindings.csharp]
cdylib_name = "snapxrust"
