[package]
name = "snapxrust"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
xcap = "0.8.1"
uniffi = { version = "0.31.0", features = [ "build" ] }
base64 = "0.22.1"
serde = "1.0.217"
serde_json = "1.0.149"

[build-dependencies]
uniffi = { version = "0.31.0", features = [ "build" ] }
uniffi_build = "0.31.0"
uniffi_bindgen = "0.31.0"
camino = "1.1.9"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[bindings.csharp]
cdylib_name = "snapxrust"
